<?xml version="1.0"?>
<?xml-model
    href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hand_eye_flexbe_behaviors</name>
  <version>1.0.0</version>
  <description>
     hand_eye_flexbe_behaviors references all implemented behaviors.
  </description>
  <maintainer email="todo@todo.com">TODO</maintainer>
  <license>BSD</license>

    <exec_depend>rclcpp</exec_depend>
    <exec_depend>rclpy</exec_depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <export>
        <flexbe_behaviors />
        <build_type>ament_cmake</build_type>
    </export>
</package>
